# postgres-populate-database

./: .env  conect.py  create_kaggle.sql  create_tables.sql  dev.env  pyproject.toml
